--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/img/4geeks.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
 
-    <!-- Fontawesome is our recomended library for icons -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-     <div class="container border mt-5 bg-light pt-3 pb-2">
-       
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-          List of emails
-        </button>
-        <div id="emailHelp" class="form-text">Click to view the email list</div>
-      </p>
-      <div class="collapse" id="collapseExample">
-        <div class="card card-body">
-          <p onload ="listOfEMails()" id="email"></p>
-        </div>
- 
-   
-    <script type="module" src="/app.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="./assets/img/4geeks.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Name Domain Generator with JS- Alba Diaz</title>
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
+</head>
+
+<body>
+  <div class="container border mt-5 bg-light pt-3 pb-2">
+
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+      aria-expanded="false" aria-controls="collapseExample">
+      List of emails
+    </button>
+    <div id="emailHelp" class="form-text">
+      Click to view the email list
+    </div>
+
+    <div class="collapse" id="collapseExample">
+      <div class="card card-body">
+        <p onload="listOfEMails()" id="email"></p>
+      </div>
+    </div>
+  </div>
+
+
+  <script type="module" src="/app.js"></script>
+</body>
+
 </html>
-
